--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,8 +20,8 @@ sites:
     url: https://www.sanmin.com.tw/
   - name: CavesBooks
     url: https://www.cavesbooks.com.tw/EC/
-   - name: Eslite
-    url: https://www.eslite.com/ 
+   - name:Bookwlker
+    url: https://www.bookwalker.com.tw/
    - name: No this Site
     url: https://www.bookwaker.com.tw/
 
